# uni-llm-api

./: Cargo.toml  README.md
.github/workflows/: release.yml
config/: test.json
src/: lib.rs
src/api/: aliyun.rs  common.rs  mod.rs  uni_ollama.rs
src/api/provider/: aliyun.rs  bytedance.rs  common.rs  deepseek.rs  google.rs  message.rs  mod.rs  siliconflow.rs  tencent.rs
src/api/uni_ollama/: chat.rs  config.rs  error.rs  message.rs  mod.rs  tag.rs
src/common/: gemini_stream.rs  mod.rs  stream.rs
src/middleware/: cors.rs  mod.rs
