[package]
name = "uni-llm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.94"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
futures = "0.3.31"
dotenvy = "0.15.7"
async-stream = "0.3.6"
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["trace"] }
parking_lot = "0.12.3"
bytes = "1.10.0"
chrono = "0.4.39"
pin-project = "1.1.9"

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "deny"
private_intra_doc_links = "deny"

[lints.rust]
missing_docs = "deny"
single_use_lifetimes = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"

[lints.clippy]
todo = "warn"
needless_borrow = "deny"
redundant_clone = "deny"
